# mdfried

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  full.md  screen-recording.nix  screenshot-tests.nix  test.md
.github/workflows/: build.yml  fast-forward.yml  release.yml  screenshots.yaml
assets/: README.md  full.md  help.md  mdfried_backdrop.webm  release.sh  screenshot-test.md  syntax.md  test.md
assets/docs/: CHANGELOG.md  help.md  help_configuration.md  welcome.md
assets/fonts/: README.md
benches/: full_parse.rs
mdfrier/: CHANGELOG.md  Cargo.toml  README.md
mdfrier/src/: lib.rs  lines.rs  link_tracker.rs  mapper.rs  markdown.rs  ratatui.rs  sections.rs  wrap.rs
mdfrier/src/snapshots/: mdfrier__ratatui__tests__render_table.snap  mdfrier__ratatui__tests__render_table_with_alignment.snap  mdfrier__tests__code_block_before_list_spacing.snap  mdfrier__tests__code_block_spacing.snap  mdfrier__tests__html.snap  mdfrier__tests__inline_image_surrounding_text.snap  mdfrier__tests__inline_image_surrounding_text.snap.new  mdfrier__tests__list_marker_mapping.snap  mdfrier__tests__list_preserve_continuations.snap  mdfrier__tests__list_preserve_formatting.snap  mdfrier__tests__separate_blockquotes_have_blank_lines.snap
nix/: screen-recording.nix  screenshot-diffs.nix  screenshot-tests.nix  screenshot.nix
ratskin/: Cargo.toml  README.md
ratskin/src/: lib.rs
src/: big_text.rs  config.rs  cursor.rs  debug.rs  document.rs  error.rs  fontpicker.rs  keybindings.rs  link.rs  links.rs  main.rs  markdown.rs  model.rs  notify.rs  renderer.rs  setup.rs  sources.rs  view.rs  watch.rs  widget_sources.rs  wordwrap.rs  worker.rs  wrap.rs
src/markdown/: blocks.rs  links.rs
src/setup/: configpicker.rs  fontpicker.rs  notification.rs
src/snapshots/: mdfried__tests__duplicate image done.snap  mdfried__tests__duplicate image preview.snap  mdfried__tests__first parse done.snap  mdfried__tests__first parse image previews.snap  mdfried__tests__list_snapshot.snap  mdfried__tests__md_snapshot.snap  mdfried__tests__reload add image done.snap  mdfried__tests__reload add image preview.snap  mdfried__tests__reload move image down.snap  mdfried__tests__reload move image up.snap
src/worker/: highlighter.rs  link_tracker.rs  markdown.rs  mermaid.rs  pipeline.rs  sections.rs
src/worker/pipeline/: line.rs  markdown.rs  table.rs  wrap.rs
src/worker/snapshots/: mdfried__worker__pipeline__tests__code_block_before_list_spacing.snap  mdfried__worker__pipeline__tests__code_block_spacing.snap  mdfried__worker__pipeline__tests__separate_blockquotes_have_blank_lines.snap  mdfried__worker__pipeline__tests__table_rendering.snap  mdfried__worker__pipeline__tests__table_with_alignment.snap
what-terminal-font/: CHANGELOG.md  Cargo.toml  LICENSE
what-terminal-font/src/: lib.rs  main.rs  tests.rs
