[package]
name = "mdfried"
version = "0.3.2"
edition = "2021"
authors = ["Benjamin Große <ste3ls@gmail.com>"]
description = "A markdown viewer for the terminal that renders images and big headers"
repository = "https://github.com/benjajaja/mdfried"
homepage = "https://github.com/benjajaja/mdfried"
readme = "README.md"
license = "GPL-3.0-or-later"
exclude = ["assets/*"]
rust-version = "1.81.0"

[dependencies]
confy = "0.6.1"
comrak = "0.28.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
image = "0.25.2"
ratatui = "^0.29.0"
ratatui-image = { version = "4.1.0", features = ["serde"] }
rusttype = "0.9.3"
rust-fontconfig = "0.1.13"
serde = "^1.0"
clap = { version = "4.5.21", features = ["cargo"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
libc = { version = "0.2", default-features = false }
futures = "0.3.28"
textwrap = "0.16.1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"

[dev-dependencies]
insta = "1.41.1"

[package.metadata.release]
sign-commit = true
push = false
