[workspace]
members = [ ".", "ratskin" ]

[package]
name = "mdfried"
version = "0.14.6"
edition = "2024"
authors = ["Benjamin Große <ste3ls@gmail.com>"]
description = "A markdown viewer for the terminal that renders images and big headers"
repository = "https://github.com/benjajaja/mdfried"
homepage = "https://github.com/benjajaja/mdfried"
readme = "README.md"
license = "GPL-3.0-or-later"
exclude = ["assets/*"]
rust-version = "1.86.0"

[dependencies]
clap = { version = "4.5.21", features = ["cargo", "derive"] }
confy = "0.6.1"
cosmic-text = "0.14.2"
image = "0.25.2"
ratatui = { version = "^0.30.0-beta.0", features = ["serde"] }
ratskin = "0.3.0"
ratatui-image = { version = "9.0.0-beta.0", features = ["serde"] }
regex = "1.11.1"
serde = { version = "^1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
libc = { version = "0.2", default-features = false }
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
log = { version = "0.4.28" }
flexi_logger = { version = "0.31.7", features = ["buffer_writer"] }

[dev-dependencies]
pretty_assertions = "1.4"

[package.metadata.release]
sign-commit = true
sign-tag = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
