[package]
name = "ratskin"
version = "0.1.0"
edition = "2021"
authors = ["Benjamin Große <ste3ls@gmail.com>"]
description = "A wrapper around termimad that produces ratatui widgets from markdown"
repository = "https://github.com/benjajaja/ratskin"
homepage = "https://github.com/benjajaja/ratskin"
readme = "README.md"
license = "MIT"
rust-version = "1.81.0"

[dependencies]
termimad = "0.31.2"
ratatui = "^0.29.0"
regex = "1.11.1"
crossterm = "0.28.1"

